--- a/fly.toml
+++ b/fly.toml
@@ -1,10 +1,52 @@
-# fly.toml app configuration file generated for gitea-server-aarulabs on 2025-05-23T10:52:57Z
+# fly.toml app configuration file generated for gitea-server-aarulabs on 2025-05-23T20:22:57Z
 #
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
-
 app = 'gitea-server-aarulabs'
 primary_region = 'fra'
+
+kill_timeout = 5
+
+[build]
+  image = "gitea/gitea:latest" # latest is the most recent stable release
+
+[env]
+  GITEA__database__DB_TYPE="sqlite3"
+  GITEA__database__PATH="/data/gitea/gitea.db"
+  GITEA__server__DOMAIN="gitea-server-aarulabs.fly.dev"
+  GITEA__server__SSH_DOMAIN="gitea-server-aarulabs.fly.dev"
+  GITEA__server__ROOT_URL="https://gitea-server-aarulabs.fly.dev"
+  GITEA__server__REDIRECT_OTHER_PORT="true" # listen on port 80, and redirect to "ROOT_URL"
+  GITEA__security__INSTALL_LOCK="true" # Don't show installer
+  # GITEA__service__DISABLE_REGISTRATION="true" # TODO: uncomment once you have created your first user
+
+# persist data
+[[mounts]]
+  destination = "/data"
+  source = "gitea_data"
+
+# ssh traffic
+[[services]]
+  internal_port = 22
+  protocol = "tcp"
+  [[services.ports]]
+    port = 22
+
+# for http->https redirect
+[[services]]
+  internal_port = 80
+  protocol = "tcp"
+
+  [[services.ports]]
+    handlers = ["http"]
+    port = 80
+
+# https traffic
+[[services]]
+  internal_port = 3000
+  protocol = "tcp"
+
+  [[services.ports]]
+    handlers = ["tls", "http"]
+    port = 443
 
 [http_service]
   internal_port = 8080
