--- a/fly.toml
+++ b/fly.toml
@@ -1,6 +1,6 @@
 # fly.toml app configuration file generated for gitea-server-aarulabs on 2025-05-23T20:22:57Z
 #
-app = 'gitea-server-aarulabs'
+app = "gitea-server-aarulabs"
 primary_region = 'fra'
 
 kill_timeout = 5
