--- a/fly.toml
+++ b/fly.toml
@@ -9,14 +9,13 @@ kill_timeout = 5
   image = "gitea/gitea:latest" # latest is the most recent stable release
 
 [env]
-  GITEA__database__DB_TYPE="sqlite3"
-  GITEA__database__PATH="/data/gitea/gitea.db"
-  GITEA__server__DOMAIN="gitea-server-aarulabs.fly.dev"
-  GITEA__server__SSH_DOMAIN="gitea-server-aarulabs.fly.dev"
-  GITEA__server__ROOT_URL="https://gitea-server-aarulabs.fly.dev"
-  GITEA__server__REDIRECT_OTHER_PORT="true" # listen on port 80, and redirect to "ROOT_URL"
-  GITEA__security__INSTALL_LOCK="true" # Don't show installer
-  # GITEA__service__DISABLE_REGISTRATION="true" # TODO: uncomment once you have created your first user
+  GITEA__database__DB_TYPE = "sqlite3"
+  GITEA__database__PATH = "/data/gitea/gitea.db"
+  GITEA__server__DOMAIN = "gitea-server-aarulabs.fly.dev"
+  GITEA__server__ROOT_URL = "https://gitea-server-aarulabs.fly.dev"
+  GITEA__server__HTTP_ADDR = "0.0.0.0"
+  GITEA__server__HTTP_PORT = "3000"
+  GITEA__security__INSTALL_LOCK = "true"
 
 # persist data
 [[mounts]]
