specify the size of the volume to be created when launching an app for the first time

--- a/fly.toml
+++ b/fly.toml
@@ -21,7 +21,8 @@ kill_timeout = 5
 [[mounts]]
   source = "gitea_data"
   destination = "/data"
-
+  initial_size = 40
+  
 # SSH (for Git over SSH, optional)
 [[services]]
   internal_port = 22
